--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-DB_URL="mongodb+srv://mkmistryhd813:NEDCltan70iAaG3o@cluster0.eyt4l6d.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-PORT="5050"
+MONGO_URL="mongodb+srv://mkmistryhd813:NEDCltan70iAaG3o@cluster0.eyt4l6d.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+PORT="3000"
 SECRET="jhbfvdshkdf"
